--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,12 @@
     <header class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-6 col-xs-12 col-xs-offset-2">
+                <div class="col-md-12 col-xs-12 ">
                     <ul class="main-nav">
                         <li><a href="{{url_for('index')}}">Home</a></li>
                         <li><a href="{{url_for('aboutme')}}">About Me</a></li>
                         <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
+                        <li><a href="{{url_for('comments')}}">Feedback</a></li>
                         <li><a href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">Contact</a></li>
                     </ul>
                     <div>
