--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <header class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-xs-12 ">
+                <div class="col-md-6 col-md-offset-6 col-xs-12 col-xs-offset-2">
                     <ul class="main-nav">
                         <li><a href="{{url_for('index')}}">Home</a></li>
                         <li><a href="{{url_for('aboutme')}}">About Me</a></li>
@@ -28,7 +28,7 @@
                         <li><a href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">Contact</a></li>
                     </ul>
                     <div>
-                        <h2 class="col-md-12 col-md-pull-6">Doug McIntosh  Seattle, WA</h2>
+                        <h2 class="col-md-6 col-md-pull-4">Doug McIntosh  Seattle, WA</h2>
                     </div>
                 </div>
             </div>
@@ -51,10 +51,10 @@
                                 <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Data Visualization</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('blank')}}">any</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('site_traffic')}}">Site Traffic</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('blank')}}">other</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">any other</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('blank')}}">ideas</a></h3>
