--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -10,14 +10,14 @@
      {% for mytopic in content.topics %}
      <option value="{{mytopic}}">{{mytopic}}</option>
      {% endfor %}
-   </select> 
+   </select>
    <input type="submit" />
 </form>-->
 {% endblock content %}
 
 {% block search_results %}
 <section style="width:100vw;display:flex">
-    <div style="width:20vw;height:60vh;overflow-y:scroll">
+    <div style="width:20vw">
         {% for k in content.types %}
         <form id="{{k}}" action="{{url_for('data_analysis')}}?graph={{k}}" width="100%" method="post">
             <input value="{{k}}" type="submit" class="full-width-button" style="text-align:left">
@@ -29,11 +29,11 @@
     <div id="myData" style="justify-content: center; margin-left: 1vw;display:flex">
         {% if content.graphs %}
         {% for gk,each_graph in content.graphs.items() %}
-         {% if each_graph.videos %}
-          <div>
-              <input type="submit" onclick="open_video_list();" value="Video List" />
-          </div>
-         {% endif %}
+        {% if each_graph.videos %}
+        <div>
+            <input type="submit" onclick="open_video_list();" value="Video List" />
+        </div>
+        {% endif %}
         <div id="{{each_graph}}" style="height: 65vh; overflow-y: scroll">
             <img src="data:image/png;base64,{{each_graph['bytes']}}" />
         </div>
