--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,22 +1,22 @@
 {% extends "index.html" %}
 
-{% block title %}Doug McIntosh{% endblock title %}
+{% block title %}Doug McIntosh About Me{% endblock %}
 {% block content %}
 <div style="height:70vh">
-  <h2 style="text-align:center">A few brief words about Me </h2>
-  <h5 style="text-align:center"><a style="align-items:center;text-align:center" href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">My LinkedIn Profile</a></h5>
-  <div style="display:flex;margin-top:5vh;margin-left:5vw;margin-right:10vw;overflow:hidden">
-    <figure style="width:25vw">
-        <img src="static/assets/me_and_Sam.jpg" alt="Ocean Park Nov. 2020"/>
-        <figcaption>Ocean Park, WA November 2020</figcaption>
-    </figure>
-    <div id="my_text" style="margin-left:10vw;display: inline-block">
-        <p>&nbsp&nbsp&nbsp&nbspI've lived and breathed drumming and music for most of my life.  I will talk your ear off about my favorite music and musicians if the topic arises.</p>
-        <p>&nbsp&nbsp&nbsp&nbspI grew up in St. Louis, MO and have been living in Seattle, WA since 2005.  I love Seattle.  I don't mind what the people around here call 'rain'.  We don't melt or freeze here.</p>
-      <p>&nbsp&nbsp&nbspIn the meantime I've also managed to work in the IT industry for 20+ years dealing mostly with server-side development/support in the Telecom domain.</p>
-      <p>&nbsp&nbsp&nbsp&nbspIT development/production support work has been incredibly painful and frustrating for me at times, but I've been able to persevere and use the lessons learned to more efficiently and effectively handle new problems when they arise.</p>
-      <p> I cannot stand mayonnaise and I am an extremely handsome genius. just an fyi for your notes.</p>
+    <h2 style="text-align:center">A few brief words about Me </h2>
+    <h5 style="text-align:center"><a style="align-items:center;text-align:center" href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">My LinkedIn Profile</a></h5>
+    <div style="display:flex;margin-top:5vh;margin-left:5vw;margin-right:10vw;overflow:hidden">
+        <figure style="width:25vw">
+            <img src="static/assets/me_and_Sam.jpg" alt="Ocean Park Nov. 2020" />
+            <figcaption>Ocean Park, WA November 2020</figcaption>
+        </figure>
+        <div id="my_text" style="margin-left:10vw;display: inline-block">
+            <p>&nbsp&nbsp&nbsp&nbspI've lived and breathed drumming and music for most of my life.  I will talk your ear off about my favorite music and musicians if the topic arises.</p>
+            <p>&nbsp&nbsp&nbsp&nbspI grew up in St. Louis, MO and have been living in Seattle, WA since 2005.  I love Seattle.  I don't mind what the people around here call 'rain'.  We don't melt or freeze here.</p>
+            <p>&nbsp&nbsp&nbspIn the meantime I've also managed to work in the IT industry for 20+ years dealing mostly with server-side development/support in the Telecom domain.</p>
+            <p>&nbsp&nbsp&nbsp&nbspIT development/production support work has been incredibly painful and frustrating for me at times, but I've been able to persevere and use the lessons learned to more efficiently and effectively handle new problems when they arise.</p>
+            <p> I cannot stand mayonnaise and I am an extremely handsome genius. just an fyi for your notes.</p>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock content %}
