--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,27 +1,28 @@
 {% extends "index.html" %}
 {% block content %}
 <section style="justify-content:center;margin-left:1vw;margin-right:1vw;width:100vw">
-  <h3 style="text-align:center">Any feedback is appreciated.</h3>
-  <h6 style="text-align:center"> or just say 'Hi' to let me know you came here</h6>
-  <div style="justify-content:center;vertical-align:top;align-items:center">
-      <form id="search" style="margin-top:1vh;margin-bottom:1vh;display:flex" action="{{ url_for('comments') }}" method="post">
-          <div style="margin-right:1vw">
-              <label for="user_email">Name/Email(optional):</label>
-              <input id="user_email" type="text" name="user_email">
-          </div>
-          <label for="comments">comments: </label>
-          <textarea id="comments" style="width:50vw;margin-right:1vw;margin-left:1vw" type="text" rows="5" name="comments"></textarea>
-          <input style="height:5vh;width:5vw" type="submit" value="Send" />
-      </form>
-  </div>  
+    <h3 style="text-align:center">Any feedback is appreciated.</h3>
+    <h6 style="text-align:center"> or just say 'Hi' to let me know you came here</h6>
+    <div style="justify-content:center;vertical-align:top;align-items:center">
+        <form id="search" style="margin-top:1vh;margin-bottom:1vh;display:flex" action="{{ url_for('comments') }}" method="post">
+            <div style="margin-right:1vw">
+                <label for="user_email">Name/Email(optional):</label>
+                <input id="user_email" type="text" name="user_email">
+            </div>
+            <label for="comments">comments: </label>
+            <textarea id="comments" style="width:50vw;margin-right:1vw;margin-left:1vw" type="text" rows="5" name="comments"></textarea>
+            <input style="height:5vh;width:5vw" type="submit" value="Send" />
+        </form>
+    </div>
 </section>
 {% endblock content %}
 {% block search_results %}
+{% include 'error_modal.html' %}
 <div style="margin-right:1vw;margin-left:1vw;height:39vh;overflow-y:scroll">
- {% for k,v in content.items() %}
-  <div style="border:1px solid black">
-    <p>{{v.date}}  <b>{{v.user_email}}</b> commented: {{v.comment}}</p>
-  </div>
- {% endfor %}
+    {% for k,v in content.items() %}
+    <div style="border:1px solid black">
+        <p><b>{{v.date}} {{v.user_email}} commented:</b> {{v.comment}}</p>
+    </div>
+    {% endfor %}
 </div>
 {% endblock search_results %}
